sgf 생성 및 공유 기능 추가
